# ez80

./: Cargo.toml  LICENSE  README.md
benches/: cpu_fast_path.rs
docs/: opcodes_8080.md  opcodes_8085.md  opcodes_ez80.md  opcodes_z180.md  opcodes_z80.md  opcodes_z80n.md
examples/: agon_light_headless.rs  cpm.rs  generate_opcode_docs.rs  ti84ce_headless.rs
scripts/: bench_dhrystone.sh
src/: cpu.rs  decoder_8080.rs  decoder_ez80.rs  decoder_gameboy.rs  decoder_z80.rs  disassembler.rs  environment.rs  fast_bus.rs  fast_core.rs  fast_env.rs  lib.rs  machine.rs  opcode.rs  opcode_alu.rs  opcode_arith.rs  opcode_bits.rs  opcode_io.rs  opcode_jumps.rs  opcode_ld.rs  operators.rs  registers.rs  state.rs  z80_mem_tools.rs
tests/: agon_firmware.rs  cpm_dist.rs  cpu_modes.rs  cputest.rs  ex8080.rs  ez80_adl_spec.rs  ez80test.rs  fast_path.rs  gameboy_test_roms.rs  opcodes.rs  opcodes_arith.rs  opcodes_bits.rs  opcodes_jumps.rs  opcodes_ld.rs  z80test.rs  zexall.rs
tests/res/: origin.txt
