[package]
name = "ez80"
version = "0.4.4"
authors = ["Tom Morton", "isaiahpettingill <git.wolverine899@passfwd.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "Zilog eZ80, Z80 and Intel 8080 emulator"
keywords = ["ez80", "z80", "8080", "cpm", "emulator"]
homepage = "https://github.com/isaiahpettingill/ez80"
repository = "https://github.com/isaiahpettingill/ez80"
readme = "README.md"
include = [
    "Cargo.toml",
    "Cargo.lock",
    "docs/**",
    "LICENSE",
    "README.md",
    "benches/**",
    "examples/**",
    "scripts/**",
    "src/**",
    "tests/**",
]

[dependencies]

[[bench]]
name = "cpu_fast_path"
harness = false
